--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,13 +3,5 @@
 }
 
 body {
-    padding: 2%;
-}
-
-input[type="text"] {
-    margin: 0 12px 0 0;
-}
-
-.top-section {
-    font-weight: bold;
+    padding: 2% 0;
 }
